--- a/arkmanager-user.cfg
+++ b/arkmanager-user.cfg
@@ -41,7 +41,7 @@ msgWarnShutdownSeconds="This ARK server will shutdown in %d seconds"
 
 # config environment
 arkwarnminutes="60"                                                 # number of minutes to warn players when using update --warn
-arkBackupPreUpdate="false"                                          # set this to true if you want to perform a backup before updating
+arkBackupPreUpdate="true"                                          # set this to true if you want to perform a backup before updating
 
 # Options to automatically remove old backups to keep backup size in check
 # Each compressed backup is generally about 1-2MB in size.
